Fix one last misalignment on FilmDetails

--- a/src/App.css
+++ b/src/App.css
@@ -1319,7 +1319,7 @@ p.review-link {
   }
 
   .review {
-    width: 48%;
+    width: 48.5%;
     margin-top: 0;
   }
 
